app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
.slide-image {
    width: 100%;
}

.carousel-holder {
    margin-bottom: 30px;
    margin-top: 20px;
}

.carousel-control,
.item {
    border-radius: 4px;
}

.carousel-caption {
    color: black;
}

.caption {
    height: 130px;
    overflow: hidden;
}

.caption h4 {
    white-space: nowrap;
}

/*.thumbnail img {
    width: 100%;
}*/

.ratings {
    padding-right: 10px;
    padding-left: 10px;
    color: #d17581;
}

.thumbnail {
    padding: 0;
}

.thumbnail .caption-full, .thumbnail .caption {
    padding: 9px;
    color: #353866;
}

.mainprod {
	margin-top: 20px;
	border: 1px solid #e3e3e3;
    border-radius: 4px;
}

.leads {
	margin-top: 20px;
}


.alert {
    margin: 10px 0;
	text-align: center; 
    & a {
    text-decoration: none;
    }
}

.hero-spacer {
    margin-top: 25px;
}

.users, .page-header, footer {
    text-align: center;
}

h1, h2, h3, h4, h5 {   
    font-family: 'Prompt', 'News Cycle', cursive, 'Oswald', sans-serif;
}

a {
    color: inherit;
}
a:hover, .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-brand:hover {
    transition: 0.5s;
    text-decoration: none;    
    color: #618499;
}

.jumbotron {
    background-color: gray;
    & p {
        font-size: inherit;
    }
}

p {
    margin: 10px 0 10px;
    text-align: center;
}

.pull-right {
    margin: 0 0 0px;
}

.indexprice {
    margin: 10px 0;
}

.zoom {
    padding-left: 0;
    padding-right: 0;
    border: 0;
}

.prodshow {
    padding-left: 0;
}

.btn-group {
    margin: 0 0 10px 10px;
}

.showcase {
    margin-top: 10px;
}

.gallery {
    border-bottom: 1px solid #353866;
}

.prodthumb, .well {
    background-color: #F8FAFF;
}

.img-circle {
    display: block;
    margin: auto;
}

#align {
    border-top: 1px solid #353866;
}

.panel-default>.panel-heading {
    background-color: #353866;
    color: #d6ecfa;
}

.panel-body {
    background-color: #F8FAFF;
}

.btn, .btn-primary {
    background-color: #353866;
    border-color: #d6ecfa;
    color: #d6ecfa;
}


#quote {
    display: block;
    font-size: 80%;
    line-height: 1.42857143;
    color: #777;
}

.maps {
    position: relative;
    padding-bottom: 90%; // (450 ÷ 500 = 0.9 = 90%)
    height: 0;
    overflow: hidden;
}
.maps iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

